# shecv

./: Cargo.toml  goal.txt  r  rr
src/: geo.rs  listui.rs  main.rs  text.rs  types.rs  window.rs
