[package]
name = "shecv"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.19.0"
glyphon = "0.5.0"
pollster = "0.3.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
bytemuck = { version = "1.16.0", features = ["derive"] }
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
env_logger = "0.11.3"
log = "0.4.22"
