[package]
name = "shecv"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
flax = "0.7.1"
glyphon = { git = "https://github.com/grovesNL/glyphon.git" }
pollster = "0.3.0"
glam = { version = "0.28.0", features = ["bytemuck"] }
bytemuck = { version = "1.16.3", features = ["derive"] }
sdl2 = { version = "0.37.0", features = ["raw-window-handle"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
env_logger = "0.11.5"
log = "0.4.22"
